kube/base/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
  labels:
    app: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - name: account
          image: account
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
