kube/base/account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account
  labels:
    app: account
spec:
  selector:
    app: account
  ports:
    - name: http
      port: 3000
      targetPort: 3000
