kube/base/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: front
spec:
  type: LoadBalancer
  selector:
    app: front
  ports:
    - name: http
      port: 80
      targetPort: 8080
