kube/base/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
spec:
  selector:
    app: server
  ports:
    - name: ws
      port: 3333
      targetPort: 3333
