kube/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: huly
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /ws/transactor
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 3333
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 80
